# qbiff

./: .archive  .certinstall  .changes  .doit  .gitignore  CMakeLists.txt  Makefile  README  button.cpp  button.h  clientfolder.cpp  clientfolder.h  clientinfo.cpp  clientinfo.h  clientinit.cpp  clientinit.h  config.h  notify.cpp  notify.h  parser.cpp  passphrase  qbiff-client  qbiff-server  qbiff.cpp  readmail  readmail.example  readmail.private  readmail.private.example  readmail.private.txt  readmail.txt  serverhandler.cpp  serverhandler.h  sslclient.cpp  sslclient.h  sslcommon.cpp  sslcommon.h  sslconnection.cpp  sslconnection.h  sslinit.cpp  sslinit.h  (+2 more)
cert-client/: Makefile  client.cnf  client.pem  clientcert.der  clientcert.pem  clientcert.pkcs12  clientkey.pem  clientreq.pem  jks  keystore.jks  passphrase  root.pem  root.srl  rootcert.der  rootcert.pem  rootcert.pkcs12  truststore.jks
cert-server/: Makefile  dh1024.pem  dh512.pem  root.cnf  root.pem  root.srl  rootcert.pem  rootkey.pem  rootreq.pem  server.cnf  server.pem  serverCA.cnf  serverCA.pem  serverCA.srl  serverCAcert.pem  serverCAkey.pem  serverCAreq.pem  servercert.pem  serverkey.pem  serverreq.pem
helper/: readmail  readmail.private
init.d/: qbiffd
pixmaps/: shape.png.transparent  shape.xpm
qbiff/: CMakeLists.txt  Makefile  button.cpp  button.h  clientfolder.cpp  clientfolder.h  clientinfo.cpp  clientinfo.h  config.h  qbiff.cpp  sslclient.cpp  sslclient.h  sslcommon.cpp  sslcommon.h
qbiffd/: CMakeLists.txt  config.h  folder.cpp  folder.h  notify.cpp  notify.h  parser.cpp  parser.h  qbiffd.cpp  scheduler.cpp  scheduler.h  server.cpp  server.h  sslcommon.cpp  sslcommon.h  sslconnection.cpp  sslconnection.h  sslinit.cpp  sslinit.h
rpm/: qbiff.changeref  qbiff.changes  qbiff.spec  qbiff.sysconfig
systemd/: qbiff.service  qbiffd.service
test/: stunnel  stunnel.conf
